--- a/01SpringBootStudy/pom.xml
+++ b/01SpringBootStudy/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>druid</artifactId>
             <version>1.1.6</version>
         </dependency>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
