SpringBootSSM-数据库连接信息配置

--- a/03SpringBootSSMStudy/src/main/resources/application.yml
+++ b/03SpringBootSSMStudy/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
   mvc:
     servlet:
       load-on-startup: 1
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springboot?characterEncoding=utf-8
+    username: root
+    password: root
 
 logging:
   level:
