--- a/03SpringBootSSMStudy/pom.xml
+++ b/03SpringBootSSMStudy/pom.xml
@@ -30,7 +30,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-
+        <!--mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <!--测试-->
         <dependency>
