--- a/03SpringBootSSMStudy/src/main/resources/application.yml
+++ b/03SpringBootSSMStudy/src/main/resources/application.yml
@@ -15,3 +15,9 @@ logging:
   level:
     com.qiangssvip: debug
   path: "D:/test/"
+
+mybatis:
+  config-location: mapper/*.xml
+  type-aliases-package: com.qiangssvip.pojo
+  configuration:
+    map-underscore-to-camel-case: true
