--- a/04SpringBootSSMPro-集成Mybatis/pom.xml
+++ b/04SpringBootSSMPro-集成Mybatis/pom.xml
@@ -32,10 +32,16 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!--mybatis-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
+        </dependency>-->
+        <!--通用mapper-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
         </dependency>
 
         <!--测试-->
