--- a/04SpringBootSSMPro-集成Mybatis/pom.xml
+++ b/04SpringBootSSMPro-集成Mybatis/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.1.5</version>
         </dependency>
+        <!--Thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <!--测试-->
         <dependency>
