--- a/04SpringBootSSMPro-集成Mybatis/src/main/resources/application.yml
+++ b/04SpringBootSSMPro-集成Mybatis/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: root
+  thymeleaf:
+    cache: false
+    mode: HTML5
+    encoding: utf-8
 
 logging:
   level:
