--- a/05SpringBootThymeleafStudy/pom.xml
+++ b/05SpringBootThymeleafStudy/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
